--- a/app/src/main/res/layout/activity_alarm_setup.xml
+++ b/app/src/main/res/layout/activity_alarm_setup.xml
@@ -92,7 +92,7 @@
                     android:id="@+id/CalibrationSetting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="10dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@+id/divider"
                     tools:layout_editor_absoluteX="10dp">
 
